[MOSIP-257] Reorg. Postgres pulled out as seperate role. Init will be done separately.

--- a/deployment/sandbox-v2/roles/postgres/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/postgres/tasks/main.yml
@@ -1,22 +1,4 @@
 ---
-# This script runs all the init SQL queries and populates all tables with
-# test data 
-- name: Create logs directory
-  file:
-    path: "{{db_log_path}}"
-    state: directory
-    mode: '0755'
-
-# Get db_ip
-- name: Get db_ip
-  command: "kubectl get node --selector='!node-role.kubernetes.io/master' -o json"
-  register: out
-
-- set_fact:
-    db_ip: "{{(out.stdout | from_json)['items'][0].status.addresses[0].address}}"
-    # Note that 'items' is a python keyword, hence we have used ['items']
-    # instead of .items 
-
 # Deploy postgress kubernetes
 - name: Ensures directory is present
   file: 
@@ -24,46 +6,26 @@
     state: directory
 
 # Create persistent storage
-- name: Create  
+- name: Get storage yml from template 
   template:
      src: k8s_pg_storage.yml.j2
      dest: '{{tmp_dir}}/k8s_pg_storage.yml'
 
-- name: Deploy on Kurbernetes
-  command: 'kubectl apply -f {{tmp_dir}}/k8s_pg_storage.yml' # TODO: repetition
+- name: Deploy storage on Kurbernetes
+  k8s:
+    namespace: default
+    state: present
+    src: '{{tmp_dir}}/k8s_pg_storage.yml'
 
-# Deploy Postgres
-- name: Copy k8s template
+# Deploy postgres container 
+- name: Get postgres yml from template 
   template:
-     src: k8s_deploy.yml.j2
-     dest: '{{tmp_dir}}/k8s_deploy.yml'  #.j2 is removed automatically
+     src: k8s_postgres.yml.j2
+     dest: '{{tmp_dir}}/k8s_postgres.yml'
 
-- name: Deploy
-  vars:
-    deployment_yml_path: '{{tmp_dir}}/k8s_deploy.yml'  
-    deployment_name: postgres
-  include_role:
-    name: common
-    tasks_from: k8s_deployment   
-  
-# TODO: Check if service has been deployed properly
-
-- name: Get DB port IP
-  command: 'kubectl get service -o json postgres'
-  register: out
-
-- set_fact:
-    db_port: '{{(out.stdout | from_json).spec.ports[0].nodePort}}'
- 
-- debug:
-    msg: 'DB Port = {{db_port}}'
-
-- include: init_db.yml
-  with_items:
-    - mosip_kernel
-    - mosip_master
-    - mosip_iam
-    - mosip_audit
-    - mosip_idrepo
-    - mosip_idmap        
-        
+- name: Deploy postgres on Kurbernetes
+  k8s:
+    state: present
+    src: '{{tmp_dir}}/k8s_postgres.yml'
+    wait: 'yes'
+    wait_timeout: 60
