--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -1,7 +1,8 @@
 ---
 - hosts: console
   roles:
-    - local-registry
-    - config-gitrepo
-    - config-server
-    - postgres
+    - only_pg
+#    - local-registry
+#    - config-gitrepo
+#    - config-server
+#    - postgres
