[MOSIP-257] Postgres tested.

--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -1,8 +1,7 @@
 ---
 - hosts: console
   roles:
-    - only_pg
+    - postgres 
 #    - local-registry
 #    - config-gitrepo
 #    - config-server
-#    - postgres
