--- a/deployment/sandbox-v2/roles/keycloak/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/keycloak/tasks/main.yml
@@ -1,3 +1,19 @@
 ---
+# Deploy Keycloak kubernetes
+- name: Ensures directory is present
+  file: 
+    path: '{{tmp_dir}}'
+    state: directory
 
-        
+# Deploy Keycloak container 
+- name: Get yml from template 
+  template:
+     src: k8s_keycloak.yml.j2
+     dest: '{{tmp_dir}}/k8s_keycloak.yml'
+
+- name: Deploy Keycloak on Kurbernetes
+  k8s:
+    state: present
+    src: '{{tmp_dir}}/k8s_keycloak.yml'
+    wait: 'yes'
+    wait_timeout: 60
