--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -1,7 +1,8 @@
 ---
 - hosts: console
   roles:
-    - postgres 
+#    - postgres 
 #    - local-registry
 #    - config-gitrepo
 #    - config-server
+    - keycloak
