--- a/deployment/sandbox-v2/roles/config-gitrepo/files/properties/kernel-qa.properties
+++ b/deployment/sandbox-v2/roles/config-gitrepo/files/properties/kernel-qa.properties
@@ -1,6 +1,6 @@
 #---------------------------------------kernel common properties-----------------------
-mosip.kernel.database.hostname=172.16.17.4
-mosip.kernel.database.port=9001
+mosip.kernel.database.hostname=postgres
+mosip.kernel.database.port=5432
 
 
 #---------------------------------------Sync Data service-------------------------------
@@ -128,8 +128,8 @@ mosip.kernel.ida.secret.key=54429689-2203-48c1-9fbf-3ea0d2181944
 ldap.admin.dn=uid=admin,ou=system
 ldap.admin.password=secret
 ldap.userdn.prefix=uid=
-ldap.userdn.suffix=,ou=people,c=mycountry
-ldap.roles.base=ou=roles,c=mycountry
+ldap.userdn.suffix=,ou=people,c=morocco
+ldap.roles.base=ou=roles,c=morocco
 ldap.roles.search.prefix=(&(objectClass=organizationalRole)(roleOccupant=
 ldap.roles.search.suffix=))
 ldap.roles.class=(objectClass=organizationalRole)
@@ -302,32 +302,26 @@ db_2_DS.datastore.schema=GOVT_OFFICERS
 
 #------------------------KeyCloak Config changes---------------------------#
 
-mosip.kernel.admin-realm-id=admin
+mosip.keycloak.base-url=http://keycloak
+
+mosip.kernel.admin-realm-id=master
 mosip.kernel.realm-id=mosip
-mosip.kernel.open-id-url=http://172.16.17.4:8444/auth/realms/{realmId}/protocol/openid-connect/
-mosip.kernel.base-url=http://172.16.17.4:8444/auth/realms/{realmId}
-mosip.kernel.admin-url=http://172.16.17.4:8444/auth/admin/
-mosip.kernel.roles-url=realms/mosip/roles
-mosip.kernel.users-url=realms/mosip/users
+mosip.kernel.open-id-url=${mosip.keycloak.base-url}/auth/realms/${mosip.kernel.realm-id}/protocol/openid-connect/
+mosip.kernel.base-url=${mosip.keycloak.base-url}/auth/realms/${mosip.kernel.realm-id}
+mosip.kernel.admin-url=${mosip.keycloak.base-url}/auth/admin/
+mosip.kernel.roles-url=realms/${mosip.kernel.realm-id}/roles
+mosip.kernel.users-url=realms/${mosip.kernel.realm-id}/users
 mosip.kernel.role-user-mapping-url=/{userId}/role-mappings/realm
-keycloak.realm=registration-client
-keycloak.resource=account
-keycloak.auth-server-url=http://172.16.17.4:8444/auth
-keycloak.ssl-required=none
-keycloak.public-client=true
-keycloak.use-resource-role-mappings=true
-keycloak.verify-token-audience=true
 
-mosip.keycloak.base-url=http://172.16.17.4:8444
-mosip.authmanager.base-url=http://172.16.17.4/v1/authmanager
+mosip.authmanager.base-url=${mosip.keycloak.base-url}/v1/authmanager
 
-mosip.keycloak.authorization_endpoint=${mosip.keycloak.base-url}/auth/realms/mosip/protocol/openid-connect/auth
+mosip.keycloak.authorization_endpoint=${mosip.keycloak.base-url}/auth/realms/${mosip.kernel.realm-id}/protocol/openid-connect/auth
 mosip.keycloak.token_endpoint=${mosip.keycloak.base-url}/auth/realms/mosip/protocol/openid-connect/token
 mosip.admin.login_flow.name=authorization_code
 mosip.admin.login_flow.response_type=code
 mosip.admin.login_flow.scope=cls
 mosip.admin.clientid=mosip-client
-mosip.admin.clientsecret=5dce7172-c8af-4fc1-805a-2febd6af575f
+mosip.admin.clientsecret=9d688580-99fd-4f18-abe5-44a7ec3655e1  
 mosip.admin.redirecturi=${mosip.authmanager.base-url}/login-redirect/
 mosip.admin_realm_id=mosip
 
@@ -336,20 +330,28 @@ mosip.master.realm-id=master
 mosip.admin.individual_role_id=535549c1-3541-4264-b766-cd2cb38c41cd
 mosip.admin.pre-reg_user_password=mosip
 
-db_3_DS.keycloak.ipaddress=jdbc:postgresql://172.16.17.4:9001/keycloak
-db_3_DS.keycloak.port=9001
+db_3_DS.keycloak.ipaddress=jdbc:postgresql://postgres:5432/keycloak
+db_3_DS.keycloak.port=5432
 db_3_DS.keycloak.username=postgres
 db_3_DS.keycloak.password=postgres
 db_3_DS.keycloak.driverClassName=org.postgresql.Driver
 
 mosip.keycloak.admin.client.id=admin-cli
-mosip.keycloak.admin.user.id=mosip
-mosip.keycloak.admin.secret.key=mosip
+mosip.keycloak.admin.user.id=admin
+mosip.keycloak.admin.secret.key=admin
+
+keycloak.realm=mosip
+keycloak.resource=account
+keycloak.auth-server-url=http://keycloak/auth
+keycloak.ssl-required=none
+keycloak.public-client=true
+keycloak.use-resource-role-mappings=true
+keycloak.verify-token-audience=true
 
 #---latest changes--#
 master.search.maximum.rows=50
 mosip.level=2
-mosip.kernel.masterdata.audit-url=http://172.16.17.4/v1/auditmanager/audits
+mosip.kernel.masterdata.audit-url=${mosip.keycloak.base-url}/v1/auditmanager/audits
 mosip.keycloak.max-no-of-users=20000
 
 #---Register device changes--#
