--- a/deployment/sandbox-v2/roles/config-server/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/config-server/tasks/main.yml
@@ -8,34 +8,32 @@
 
 - name: Download kernel-server-config tar
   get_url:
-    url: "{{artifactory_uri}}/artifactory/libs-release-local/io/mosip/kernel/kernel-config-server/{{version}}/kernel-config-server-{{version}}.jar"
-    dest: '{{docker_path}}/kernel-config-server-{{version}}.jar'
+    url: "{{artifactory_uri}}/artifactory/libs-release-local/io/mosip/kernel/kernel-config-server/{{modules['kernel-config-server']['version']}}/kernel-config-server-{{modules['kernel-config-server']['version']}}.jar"
+    dest: "{{role_path}}/files/kernel-config-server-{{modules['kernel-config-server']['version']}}.jar"
 
 - name: Build docker and push it local registry  
   docker_image:
     name: '{{local_registry}}/kernel-config-server'
-    tag: '{{version}}'
-    push: 'yes'
+    tag: "{{modules['kernel-config-server']['version']}}"
+    push: yes
     source: build
     build:
-      path: '{{docker_path}}' 
-      pull: 'yes'
+      path: '{{role_path}}/files' 
+      pull: yes
       args:
-        version: '{{version}}'
+        version: "{{modules['kernel-config-server']['version']}}"
         git_uri: 'http://gitrepo/{{config_gitrepo_name}}'
       #TODO: pickup gitrepo from service name
 
-- name: Deploy docker on Kubernetes. Copy k8s template
+- name: Copy k8s template
   template:
      src: k8s_deploy.xml.j2
      dest: '{{tmp_dir}}/k8s_deploy.yml'
 
-- name: Deploy
-  vars:
-    deployment_yml_path: '{{tmp_dir}}/k8s_deploy.yml'  
-    deployment_name: kernel-config-server
-  include_role:
-    name: common
-    tasks_from: k8s_deployment 
-
+- name: Deploy on Kubernetes
+  k8s:
+    src: '{{tmp_dir}}/k8s_deploy.yml'  
+    state: present
+    wait: yes
+    wait_timeout: 60 
 
