--- a/deployment/sandbox-v2/roles/dashboard/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/dashboard/tasks/main.yml
@@ -1,18 +1,17 @@
-#- name: Deploy dashboard 
-#  command: 'kubectl apply -f {{role_path}}/files/k8s_dashboard.yml' 
-#
-#- pause:
-#    seconds: 5
-#
+- name: Deploy dashboard 
+  k8s:
+    src: '{{role_path}}/files/k8s_dashboard.yml' 
+    state: present 
+
 - name: Get dashboard pod name
   command: 'kubectl -n kubernetes-dashboard -l k8s-app=kubernetes-dashboard get pods --no-headers -o custom-columns=":metadata.name"'
   register: out
 
 - debug:
     msg: 
-    - See dashboard on https://localhost:8000.  Use below token (without quotes) for login 
+    - "See dashboard on https://localhost:{{dashboard_port}}.  Use below token (without quotes) for login"
     - '{{lookup("file", "token.txt")}}'
 
 - name: Start port forwarding
-  shell:  'kubectl -n kubernetes-dashboard port-forward pod/{{out.stdout}} 8000:8443'
+  shell:  'kubectl -n kubernetes-dashboard port-forward pod/{{out.stdout}} {{dashboard_port}}:8443'
 
