--- a/deployment/sandbox-v2/roles/config-gitrepo/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/config-gitrepo/tasks/main.yml
@@ -54,6 +54,7 @@
 
 - name: Deploy gitrepo service on Kurbernetes
   k8s:
+     namespace: default
      state: present
      src: '{{tmp_dir}}/k8s_git_service.yml'
 
@@ -64,6 +65,7 @@
 
 - name: Deploy gitrepo endpoint on Kurbernetes
   k8s:
+    namespace: default
     state: present
     src: '{{tmp_dir}}/k8s_git_endpoint.yml' 
 
