[MOSIP-257] Bug fixes

--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -1,10 +1,10 @@
 ---
 - hosts: console
   roles:
-     - postgres 
-     - postgres-init
-     - local-registry
-     - config-gitrepo
+#     - postgres 
+#     - postgres-init
+#     - local-registry
+#     - config-gitrepo
      - config-server
      - keycloak
      - kernel-auth-service
