--- a/deployment/sandbox-v2/roles/config-gitrepo/files/properties/kernel-qa.properties
+++ b/deployment/sandbox-v2/roles/config-gitrepo/files/properties/kernel-qa.properties
@@ -304,8 +304,13 @@ db_2_DS.datastore.schema=GOVT_OFFICERS
 
 mosip.keycloak.base-url=http://keycloak
 
+#Unused
 mosip.kernel.admin-realm-id=master
+
 mosip.kernel.realm-id=mosip
+mosip.admin_realm_id=mosip
+mosip.master.realm-id=master
+
 mosip.kernel.open-id-url=${mosip.keycloak.base-url}/auth/realms/${mosip.kernel.realm-id}/protocol/openid-connect/
 mosip.kernel.base-url=${mosip.keycloak.base-url}/auth/realms/${mosip.kernel.realm-id}
 mosip.kernel.admin-url=${mosip.keycloak.base-url}/auth/admin/
@@ -323,9 +328,6 @@ mosip.admin.login_flow.scope=cls
 mosip.admin.clientid=mosip-client
 mosip.admin.clientsecret=9d688580-99fd-4f18-abe5-44a7ec3655e1  
 mosip.admin.redirecturi=${mosip.authmanager.base-url}/login-redirect/
-mosip.admin_realm_id=mosip
-
-mosip.master.realm-id=master
 
 mosip.admin.individual_role_id=535549c1-3541-4264-b766-cd2cb38c41cd
 mosip.admin.pre-reg_user_password=mosip
@@ -340,6 +342,7 @@ mosip.keycloak.admin.client.id=admin-cli
 mosip.keycloak.admin.user.id=admin
 mosip.keycloak.admin.secret.key=admin
 
+# Unused - start
 keycloak.realm=mosip
 keycloak.resource=account
 keycloak.auth-server-url=http://keycloak/auth
@@ -347,6 +350,7 @@ keycloak.ssl-required=none
 keycloak.public-client=true
 keycloak.use-resource-role-mappings=true
 keycloak.verify-token-audience=true
+# Unused - end 
 
 #---latest changes--#
 master.search.maximum.rows=50
