[MOSIP-257] Client parameters set.

--- a/deployment/sandbox-v2/roles/keycloak-init/tasks/create_client.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/tasks/create_client.yml
@@ -9,6 +9,10 @@
     auth_password: '{{keycloak_password}}'
     client_id: '{{client_id}}'
     realm: '{{realm_id}}' 
+    standard_flow_enabled: yes 
+    direct_access_grants_enabled: yes
+    service_accounts_enabled: yes
+    authorization_services_enabled: yes
     state: present
 
 - 
