--- a/deployment/sandbox-v2/roles/config-gitrepo/files/properties/kernel-qa.properties
+++ b/deployment/sandbox-v2/roles/config-gitrepo/files/properties/kernel-qa.properties
@@ -325,7 +325,7 @@ mosip.keycloak.token_endpoint=${mosip.keycloak.base-url}/auth/realms/mosip/proto
 mosip.admin.login_flow.name=authorization_code
 mosip.admin.login_flow.response_type=code
 mosip.admin.login_flow.scope=cls
-mosip.admin.clientid=mosip-client
+mosip.admin.clientid=mosip-admin-client
 mosip.admin.clientsecret=9d688580-99fd-4f18-abe5-44a7ec3655e1  
 mosip.admin.redirecturi=${mosip.authmanager.base-url}/login-redirect/
 
