[MOSIP-257] Roles added.

--- a/deployment/sandbox-v2/roles/keycloak-init/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/tasks/main.yml
@@ -39,3 +39,21 @@
       realm_id: '{{item.realm_id}}'   
       client_id: '{{item.client_id}}'
   with_items: '{{keycloak_mosip_clients}}'
+
+- include_tasks:
+    file: create_realm_role.yml
+  vars:
+      realm_id: '{{item.realm_id}}'   
+      client_id: '{{item.client_id}}'
+      role_file: '{{item.role_file}}' 
+  with_items: '{{keycloak_mosip_roles}}'
+  when: client_id == '' 
+
+- include_tasks:
+    file: create_client_role.yml
+  vars:
+      realm_id: '{{item.realm_id}}'   
+      client_id: '{{item.client_id}}'
+      role_file: '{{item.role_file}}' 
+  with_items: '{{keycloak_mosip_roles}}'
+  when: client_id != '' 
