--- a/deployment/sandbox-v2/roles/keycloak-init/tasks/create_role.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/tasks/create_role.yml
@@ -1,3 +1,19 @@
+
+# These tasks create a role inside a realm
+- name: Create role {{role_file}} inside realm {{realm_id}} 
+  uri:
+    url: '{{keycloak_url}}/auth/admin/realms/{{realm_id}}/roles'
+    method: POST
+    src: '{{role_file}}'
+    remote_src: 'no'
+    status_code:
+     - 201
+    headers:
+      Content-type: "application/json"
+      Accept: "application/json"
+      Authorization: "Bearer {{keycloak_admin_token}}"
+  when: (client_id | trim)  == ''
+
 # These tasks create a role inside a client 
 - name: 'Get "id" of a client (not "client_id")' 
   uri:
@@ -15,7 +31,7 @@
 - name: Create role inside {{client_id}}
   uri:
     url: '{{keycloak_url}}/auth/admin/realms/{{realm_id}}/clients/{{client_info.json[0].id}}/roles'
-    method: POST
+    method: POST 
     src: '{{role_file}}' 
     remote_src: 'no'
     status_code:
