--- a/deployment/sandbox-v2/roles/keycloak-init/tasks/create_role.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/tasks/create_role.yml
@@ -1,23 +1,10 @@
+- name: Read name of role
+  set_fact:
+    kc_role_name: "{{(lookup('file', '{{kc_role_file}}') | from_json).name}}"
 
-# These tasks create a role inside a realm
-- name: Create role {{role_file}} inside realm {{realm_id}} 
-  uri:
-    url: '{{keycloak_url}}/auth/admin/realms/{{realm_id}}/roles'
-    method: POST
-    src: '{{role_file}}'
-    remote_src: 'no'
-    status_code:
-     - 201
-    headers:
-      Content-type: "application/json"
-      Accept: "application/json"
-      Authorization: "Bearer {{keycloak_admin_token}}"
-  when: (client_id | trim)  == ''
-
-# These tasks create a role inside a client 
 - name: 'Get "id" of a client (not "client_id")' 
   uri:
-    url: '{{keycloak_url}}/auth/admin/realms/{{realm_id}}/clients?clientId={{client_id}}'
+    url: '{{keycloak_url}}/auth/admin/realms/{{kc_realm_id}}/clients?clientId={{kc_client_id}}'
     method: GET 
     remote_src: 'no'
     status_code:
@@ -27,12 +14,39 @@
       Accept: "application/json"
       Authorization: "Bearer {{keycloak_admin_token}}"
   register: client_info 
+  when: (kc_client_id | trim) != ''
 
-- name: Create role inside {{client_id}}
+# Url is different for client and realm roles
+- set_fact:
+    keycloak_role_url: '{{keycloak_url}}/auth/admin/realms/{{kc_realm_id}}/roles'
+  when: (kc_client_id | trim)  == ''  # Role inside realm
+
+- set_fact:
+    keycloak_role_url: '{{keycloak_url}}/auth/admin/realms/{{kc_realm_id}}/clients/{{client_info.json[0].id}}/roles'
+  when: (kc_client_id | trim) != ''  # Role inside client
+
+# Check if the role exists
+- name: Check if role exists.  
   uri:
-    url: '{{keycloak_url}}/auth/admin/realms/{{realm_id}}/clients/{{client_info.json[0].id}}/roles'
+    url: '{{keycloak_role_url}}/{{kc_role_name}}'
+    method: GET 
+    remote_src: 'no'
+    status_code:
+     - 200
+     - 404
+    headers:
+      Content-type: "application/json"
+      Accept: "application/json"
+      Authorization: "Bearer {{keycloak_admin_token}}"
+  register: kc_role_exists 
+
+# Check if role exists, update it
+
+- name: Create role 
+  uri:
+    url: '{{keycloak_role_url}}'
     method: POST 
-    src: '{{role_file}}' 
+    src: '{{kc_role_file}}' 
     remote_src: 'no'
     status_code:
      - 201
@@ -40,4 +54,18 @@
       Content-type: "application/json"
       Accept: "application/json"
       Authorization: "Bearer {{keycloak_admin_token}}"
+  when: "kc_role_exists.status == 404"  # Role does not exist
 
+- name: Update role 
+  uri:
+    url: '{{keycloak_role_url}}/{{kc_role_name}}'
+    method: PUT 
+    src: '{{kc_role_file}}' 
+    remote_src: 'no'
+    status_code:
+     - 204
+    headers:
+      Content-type: "application/json"
+      Accept: "application/json"
+      Authorization: "Bearer {{keycloak_admin_token}}"
+  when: "kc_role_exists.status == 200"  # Role does not exist
