--- a/deployment/sandbox-v2/roles/keycloak-init/tasks/create_realm.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/tasks/create_realm.yml
@@ -1,7 +1,7 @@
 
-- name: 'Find out, if Realm {{realm_name}} exists'
+- name: 'Find out, if Realm {{keycloak_realm_id}} exists'
   uri:
-    url: "{{keycloak_url}}/auth/admin/realms/{{keycloak_realm_name}}"
+    url: "{{keycloak_url}}/auth/admin/realms/{{keycloak_realm_id}}"
     method: GET
     status_code:
      - 200
@@ -12,9 +12,9 @@
   register: keycloak_realm_exists
 
 - debug:
-     msg: 'Realm {{keycloak_realm_name}} exists: {{keycloak_realm_exists.status}}' 
+     msg: 'Realm {{keycloak_realm_id}} exists: {{keycloak_realm_exists.status}}' 
 
-- name: 'Create Realm {{keycloak_realm_name}}' 
+- name: 'Create Realm {{keycloak_realm_id}}' 
   uri:
     url: '{{keycloak_url}}/auth/admin/realms'
     method: POST
@@ -26,12 +26,11 @@
       Content-type: "application/json"
       Accept: "application/json"
       Authorization: "Bearer {{keycloak_admin_token}}"
-  register: keycloak_realm_create
   when: "keycloak_realm_exists.status == 404"
 
-- name: 'Update Realm {{keycloak_realm_name}} for service Keycloak'
+- name: 'Update Realm {{keycloak_realm_id}} for service Keycloak'
   uri:
-    url: '{{keycloak_url}}/auth/admin/realms/{{keycloak_realm_name}}'
+    url: '{{keycloak_url}}/auth/admin/realms/{{keycloak_realm_id}}'
     method: PUT
     src: "{{keycloak_realm_data_file}}"
     remote_src: "no"
@@ -41,5 +40,4 @@
       Content-type: "application/json"
       Accept: "application/json"
       Authorization: "Bearer {{keycloak_admin_token}}"
-  register: keycloak_realm_create
   when: "keycloak_realm_exists.status == 200"
