[MOSIP-257] Minor documentation update.

--- a/deployment/sandbox-v2/roles/keycloak-init/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
+# TODO: Update mosip-admin-client secret key in kernel properties
 - name: Get port of keycloak service
   k8s_info:
     api_version: v1
