--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -1,10 +1,11 @@
 ---
 - hosts: console
   roles:
-#     - postgres 
-#     - postgres-init
-#     - local-registry
-#     - config-gitrepo
+     - postgres 
+     - postgres-init
+     - local-registry
+     - config-gitrepo
      - config-server
      - keycloak
+     - keycloak-init
      - kernel-auth-service
