--- a/deployment/sandbox-v2/roles/config-gitrepo/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/config-gitrepo/tasks/main.yml
@@ -26,13 +26,13 @@
 - name: Init git repo
   command: 'git init {{config_gitrepo}}'
 
-- name: Check-in existing files
+- name: Check-in property files
   shell: 'git add -A; git -c user.email="{{ansible_user_id}}@mosip" commit -a -m "Updated"'
   args:
     chdir: '{{config_gitrepo}}' 
   ignore_errors: yes  # TODO: Check git status properly
  
-- name: Start git http server docker 
+- name: Start git http server docker on console 
   docker_container:
     name: git-http-server
     image: cirocosta/gitserver-http
@@ -47,12 +47,12 @@
     path: '{{tmp_dir}}'
     state: directory
 
-- name: Gitrepo service yml
+- name: Gitrepo service yml from template
   template:
      src: k8s_git_service.yml.j2
      dest: '{{tmp_dir}}/k8s_git_service.yml'
 
-- name: Deploy gitrepo service on Kurbernetes
+- name: Deploy gitrepo service on Kurbernetes to access repo from inside cluster
   k8s:
      namespace: default
      state: present
@@ -63,7 +63,7 @@
      src: k8s_git_endpoint.yml.j2
      dest: '{{tmp_dir}}/k8s_git_endpoint.yml'
 
-- name: Deploy gitrepo endpoint on Kurbernetes
+- name: Deploy gitrepo endpoint on Kurbernetes 
   k8s:
     namespace: default
     state: present
