--- a/deployment/sandbox-v2/roles/config-server/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/config-server/tasks/main.yml
@@ -27,7 +27,7 @@
         git_uri: 'http://gitrepo/{{config_gitrepo_name}}'
       #TODO: pickup gitrepo from service name
 
-- name: Copy k8s template
+- name: Kubernetes yml file from template 
   template:
      src: k8s_deploy.xml.j2
      dest: '{{tmp_dir}}/k8s_deploy.yml'
@@ -37,5 +37,5 @@
     src: '{{tmp_dir}}/k8s_deploy.yml'  
     state: present
     wait: yes
-    wait_timeout: 60 
+    wait_timeout: 120 
 
