--- a/deployment/sandbox-v2/roles/postgres-init/tasks/init_db.yml
+++ b/deployment/sandbox-v2/roles/postgres-init/tasks/init_db.yml
@@ -1,32 +1,32 @@
 # This sequence of tasks runs the required sqls and loads DB with test data
 - debug:
-    msg: Initialize {{item}} DB
+    msg: Initialize {{item}} db 
 
-- name: Replace IP address 
+- name: '{{item}}: Update ip address in postgres init files'
   lineinfile:
     path: '{{sql_path}}/{{item}}/{{item}}_deploy.properties'
     regexp: '^DB_SERVERIP='
     line: DB_SERVERIP={{postgres_external_ip}}
    
-- name: Replace Port 
+- name: '{{item}}: Update port in postgres init files'
   lineinfile:
     path: '{{sql_path}}/{{item}}/{{item}}_deploy.properties'
     regexp: '^DB_PORT='
     line: DB_PORT={{db_port}}
 
-- name: Replace password
+- name: '{{item}}: Update super user password in postgres init files' 
   lineinfile:
     path: '{{sql_path}}/{{item}}/{{item}}_deploy.properties'
     regexp: '^SU_USER_PWD='
     line: SU_USER_PWD={{postgres_password}}
 
-- name: Replace base path 
+- name: '{{item}}: Update basepath in postgres init files' 
   lineinfile:
     path: '{{sql_path}}/{{item}}/{{item}}_deploy.properties'
     regexp: '^BASEPATH='
     line: BASEPATH={{sql_path}}
 
-- name: Replace log path 
+- name: '{{item}}: Update log path in postgres init files' 
   lineinfile:
     path: '{{sql_path}}/{{item}}/{{item}}_deploy.properties'
     regexp: '^LOG_PATH='
@@ -35,4 +35,4 @@
 - name: Run {{item}} shell script
   shell: 'bash {{item}}_db_deploy.sh {{item}}_deploy.properties'
   args:
-    chdir: '{{ sql_path }}/{{item}}'
+    chdir: '{{ sql_path }}/{{item}'
