--- a/deployment/sandbox-v2/roles/postgres/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/postgres/tasks/main.yml
@@ -1,18 +1,18 @@
 ---
 # Deploy postgress kubernetes
 # TODO: Internally postgress service can run on port 80
-- name: Ensures directory is present
+- name: Ensures tmp directory is present
   file: 
     path: '{{tmp_dir}}'
     state: directory
 
 # Create persistent storage
-- name: Get storage yml from template 
+- name: Get persistent storage yml from template 
   template:
      src: k8s_pg_storage.yml.j2
      dest: '{{tmp_dir}}/k8s_pg_storage.yml'
 
-- name: Deploy storage on Kurbernetes
+- name: Deploy persistent storage on kurbernetes
   k8s:
     namespace: default
     state: present
@@ -24,7 +24,7 @@
      src: k8s_postgres.yml.j2
      dest: '{{tmp_dir}}/k8s_postgres.yml'
 
-- name: Deploy postgres on Kurbernetes
+- name: Deploy postgres on kurbernetes
   k8s:
     state: present
     src: '{{tmp_dir}}/k8s_postgres.yml'
