[MOSIP-257] Internal postgres service port changed to 80 to keep it consistent with other services.

--- a/deployment/sandbox-v2/roles/config-gitrepo/files/properties/kernel-qa.properties
+++ b/deployment/sandbox-v2/roles/config-gitrepo/files/properties/kernel-qa.properties
@@ -1,6 +1,8 @@
 #---------------------------------------kernel common properties-----------------------
 mosip.kernel.database.hostname=postgres
-mosip.kernel.database.port=5432
+# Inside Kubernetes services are exposed on port 80 (most of them)
+# For external connection to postgres, nodePort must be used.
+mosip.kernel.database.port=80 
 
 
 #---------------------------------------Sync Data service-------------------------------
@@ -332,8 +334,8 @@ mosip.admin.redirecturi=${mosip.authmanager.base-url}/login-redirect/
 mosip.admin.individual_role_id=535549c1-3541-4264-b766-cd2cb38c41cd
 mosip.admin.pre-reg_user_password=mosip
 
-db_3_DS.keycloak.ipaddress=jdbc:postgresql://postgres:5432/keycloak
-db_3_DS.keycloak.port=5432
+db_3_DS.keycloak.ipaddress=jdbc:postgresql://postgres:80/keycloak
+db_3_DS.keycloak.port=80
 db_3_DS.keycloak.username=postgres
 db_3_DS.keycloak.password=postgres
 db_3_DS.keycloak.driverClassName=org.postgresql.Driver
