--- a/deployment/sandbox-v2/roles/keycloak-init/vars/main.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/vars/main.yml
@@ -1,9 +1,11 @@
 keycloak_mosip_realms:
   - {realm_id: 'mosip', realm_file: 'realms/realm_mosip.json'}
 
+# There can be only one admin client at this point of time, whose secret
+# Key should be updated in properties file
 keycloak_mosip_clients:
-  - {realm_id: 'mosip', client_id: 'mosip-admin-client'} 
-  - {realm_id: 'mosip', client_id: 'mosip-registration-client'} 
+  - {realm_id: 'mosip', client_id: 'mosip-admin-client', is_admin: true, secret: 'xyz123'}  
+  - {realm_id: 'mosip', client_id: 'mosip-registration-client', is_admin: false, secret: 'abc123'} 
 
 keycloak_mosip_roles:
   - {realm_id: 'mosip', client_id: '', role_file: 'roles/admin.json'}
