changing clamav ip

--- a/deployment/sandbox/playbooks/kernel-config-server.yml
+++ b/deployment/sandbox/playbooks/kernel-config-server.yml
@@ -463,7 +463,7 @@
           path: ../config-properties/registration-processor-qa.properties
           regexp: '^token.request.secretKey='
           line: token.request.secretKey=6754d6f8-3e1b-4d60-9b94-be46ed9e6262
-       
+
       - name: Changing mosip.kernel.virus-scanner.host registration-processor-qa.properties
         lineinfile:
           path: ../config-properties/registration-processor-qa.properties
@@ -475,6 +475,12 @@
           path: ../config-properties/registration-processor-camel-routes-new-dmz-qa.xml
           regexp: '<your_private_ip>'
           replace: "{{ private_ip.stdout }}"
+
+      - name: Changing mosip.kernel.virus-scanner.host application-qa.properties
+        lineinfile:
+          path: ../config-properties/application-qa.properties
+          regexp: '^mosip.kernel.virus-scanner.host='
+          line: mosip.kernel.virus-scanner.host={{ private_ip.stdout }}   
 
       - name: Changing NameNode url in hdfs
         lineinfile:
