--- a/deployment/sandbox-v2/roles/config-server/files/Dockerfile
+++ b/deployment/sandbox-v2/roles/config-server/files/Dockerfile
@@ -1,11 +1,9 @@
 FROM openjdk:8
 ARG git_uri
 ARG version
-ARG git_search_paths 
+ARG jar_name
 WORKDIR /home/config
-copy kernel-config-server-${version}.jar /home/config/kernel-config-server.jar
+copy ${jar_name}-${version}.jar /home/config/${jar_name}.jar
 EXPOSE 51000
 ENV env_git_uri=${git_uri}
-ENV env_git_search_paths=${git_search_paths}
-#CMD java -jar -Dspring.cloud.config.server.git.uri=${env_git_uri} -Dspring.cloud.config.server.git.search-paths=${env_git_search_paths} kernel-config-server.jar
-CMD java -jar -Dspring.cloud.config.server.git.uri=${env_git_uri} kernel-config-server.jar
+CMD java -jar -Dspring.cloud.config.server.git.uri=${env_git_uri} ${jar_name}.jar
