--- a/deployment/sandbox-v2/roles/postgres-init/tasks/init_db.yml
+++ b/deployment/sandbox-v2/roles/postgres-init/tasks/init_db.yml
@@ -4,35 +4,35 @@
 
 - name: '{{item}}: Update ip address in postgres init files'
   lineinfile:
-    path: '{{sql_path}}/{{item}}/{{item}}_deploy.properties'
+    path: '{{pg_init_sql_path}}/{{item}}/{{item}}_deploy.properties'
     regexp: '^DB_SERVERIP='
     line: DB_SERVERIP={{postgres_external_ip}}
    
 - name: '{{item}}: Update port in postgres init files'
   lineinfile:
-    path: '{{sql_path}}/{{item}}/{{item}}_deploy.properties'
+    path: '{{pg_init_sql_path}}/{{item}}/{{item}}_deploy.properties'
     regexp: '^DB_PORT='
     line: DB_PORT={{db_port}}
 
 - name: '{{item}}: Update super user password in postgres init files' 
   lineinfile:
-    path: '{{sql_path}}/{{item}}/{{item}}_deploy.properties'
+    path: '{{pg_init_sql_path}}/{{item}}/{{item}}_deploy.properties'
     regexp: '^SU_USER_PWD='
     line: SU_USER_PWD={{postgres_password}}
 
 - name: '{{item}}: Update basepath in postgres init files' 
   lineinfile:
-    path: '{{sql_path}}/{{item}}/{{item}}_deploy.properties'
+    path: '{{pg_init_sql_path}}/{{item}}/{{item}}_deploy.properties'
     regexp: '^BASEPATH='
-    line: BASEPATH={{sql_path}}
+    line: BASEPATH={{pg_init_sql_path}}
 
 - name: '{{item}}: Update log path in postgres init files' 
   lineinfile:
-    path: '{{sql_path}}/{{item}}/{{item}}_deploy.properties'
+    path: '{{pg_init_sql_path}}/{{item}}/{{item}}_deploy.properties'
     regexp: '^LOG_PATH='
     line: LOG_PATH={{logs_dir}}
 
 - name: 'Run {{item}} shell script'
   shell: 'bash {{item}}_db_deploy.sh {{item}}_deploy.properties'
   args:
-    chdir: '{{ sql_path }}/{{item}}'
+    chdir: '{{pg_init_sql_path}}/{{item}}'
