--- a/deployment/sandbox-v2/roles/config-server/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/config-server/tasks/main.yml
@@ -30,12 +30,12 @@
 
 - name: Kubernetes yml file from template 
   template:
-     src: k8s_deploy.xml.j2
-     dest: '{{tmp_dir}}/k8s_deploy.yml'
+     src: k8s_config_server.yml.j2
+     dest: '{{tmp_dir}}/k8s_config_server.yml'
 
 - name: Deploy on Kubernetes
   k8s:
-    src: '{{tmp_dir}}/k8s_deploy.yml'  
+    src: '{{tmp_dir}}/k8s_config_server.yml'  
     state: present
     wait: yes
     wait_timeout: 120 
