[MOSIP-257] Role mapping added.

--- a/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
@@ -8,26 +8,26 @@ keycloak_mosip_clients:
   - {realm_id: 'mosip', client_id: 'mosip-registration-client', is_admin: false, secret: 'abc123'} 
 
 keycloak_mosip_roles:  # Currently, all rolese belong to a realm (not to any client)
-  - {realm_id: 'mosip', client_id: '', role_json: '{"name": "REGISTRATION_OFFICER"}'}
-  - {realm_id: 'mosip', client_id: '', role_json: '{"name": "ID_AUTHENTICATION"}'}
-  - {realm_id: 'mosip', client_id: '', role_json: '{"name": "DEVICE_PROVIDER"}'}
-  - {realm_id: 'mosip', client_id: '', role_json: '{"name": "SUPERADMIN"}'}
-  - {realm_id: 'mosip', client_id: '', role_json: '{"name": "ZONAL_ADMIN"}'}
-  - {realm_id: 'mosip', client_id: '', role_json: '{"name": "GLOBAL_ADMIN"}'}
-  - {realm_id: 'mosip', client_id: '', role_json: '{"name": "RESIDENT"}'}
-  - {realm_id: 'mosip', client_id: '', role_json: '{"name": "REGISTRATION_PROCESSOR"}'}
-  - {realm_id: 'mosip', client_id: '', role_json: '{"name": "ZONAL_APPROVER"}'}
-  - {realm_id: 'mosip', client_id: '', role_json: '{"name": "REGISTRATION_OFFICER"}'}
-  - {realm_id: 'mosip', client_id: '', role_json: '{"name": "REGISTRATION_OPERATOR"}'}
-  - {realm_id: 'mosip', client_id: '', role_json: '{"name": "INDIVIDUAL"}'}
-  - {realm_id: 'mosip', client_id: '', role_json: '{"name": "AUTH"}'}
-  - {realm_id: 'mosip', client_id: '', role_json: '{"name": "CENTRAL_APPROVER"}'}
-  - {realm_id: 'mosip', client_id: '', role_json: '{"name": "MISP"}'}
-  - {realm_id: 'mosip', client_id: '', role_json: '{"name": "CENTRAL_ADMIN"}'}
-  - {realm_id: 'mosip', client_id: '', role_json: '{"name": "PREREG"}'}
-  - {realm_id: 'mosip', client_id: '', role_json: '{"name": "PRE_REGISTRATION_ADMIN"}'}
-  - {realm_id: 'mosip', client_id: '', role_json: '{"name": "REGISTRATION_ADMIN"}'}
-  - {realm_id: 'mosip', client_id: '', role_json: '{"name": "REGISTRATION_SUPERVISOR"}'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_OFFICER'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'ID_AUTHENTICATION'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'DEVICE_PROVIDER'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'SUPERADMIN'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'ZONAL_ADMIN'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'GLOBAL_ADMIN'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'RESIDENT'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_PROCESSOR'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'ZONAL_APPROVER'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_OFFICER'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_OPERATOR'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'INDIVIDUAL'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'AUTH'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'CENTRAL_APPROVER'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'MISP'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'CENTRAL_ADMIN'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'PREREG'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'PRE_REGISTRATION_ADMIN'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_ADMIN'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_SUPERVISOR'}
 
 keycloak_mosip_users:
   - {realm_id: 'mosip', user_file: 'users/puneet.json'}
@@ -35,4 +35,23 @@ keycloak_mosip_users:
 keycloak_mosip_user_role_map:
   - {realm_id: 'mosip', user_file: 'users/puneet.json', role_name: 'REGISTRATION_OFFICER'}
   - {realm_id: 'mosip', user_file: 'users/puneet.json', role_name: 'ID_AUTHENTICATION'}
+  - {realm_id: 'mosip', user_file: 'users/puneet.json', role_name: 'DEVICE_PROVIDER'}
+  - {realm_id: 'mosip', user_file: 'users/puneet.json', role_name: 'SUPERADMIN'}
+  - {realm_id: 'mosip', user_file: 'users/puneet.json', role_name: 'ZONAL_ADMIN'}
+  - {realm_id: 'mosip', user_file: 'users/puneet.json', role_name: 'GLOBAL_ADMIN'}
+  - {realm_id: 'mosip', user_file: 'users/puneet.json', role_name: 'RESIDENT'}
+  - {realm_id: 'mosip', user_file: 'users/puneet.json', role_name: 'REGISTRATION_PROCESSOR'}
+  - {realm_id: 'mosip', user_file: 'users/puneet.json', role_name: 'ZONAL_APPROVER'}
+  - {realm_id: 'mosip', user_file: 'users/puneet.json', role_name: 'REGISTRATION_OFFICER'}
+  - {realm_id: 'mosip', user_file: 'users/puneet.json', role_name: 'REGISTRATION_OPERATOR'}
+  - {realm_id: 'mosip', user_file: 'users/puneet.json', role_name: 'INDIVIDUAL'}
+  - {realm_id: 'mosip', user_file: 'users/puneet.json', role_name: 'AUTH'}
+  - {realm_id: 'mosip', user_file: 'users/puneet.json', role_name: 'CENTRAL_APPROVER'}
+  - {realm_id: 'mosip', user_file: 'users/puneet.json', role_name: 'MISP'}
+  - {realm_id: 'mosip', user_file: 'users/puneet.json', role_name: 'PREREG'}
+  - {realm_id: 'mosip', user_file: 'users/puneet.json', role_name: 'CENTRAL_ADMIN'}
+  - {realm_id: 'mosip', user_file: 'users/puneet.json', role_name: 'PRE_REGISTRATION_ADMIN'}
+  - {realm_id: 'mosip', user_file: 'users/puneet.json', role_name: 'REGISTRATION_ADMIN'}
+  - {realm_id: 'mosip', user_file: 'users/puneet.json', role_name: 'REGISTRATION_SUPERVISOR'}
+  - {realm_id: 'mosip', user_file: 'users/puneet.json', role_name: 'RESIDENT'}
 
