--- a/deployment/sandbox-v2/roles/keycloak-init/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/tasks/main.yml
@@ -28,30 +28,30 @@
     keycloak_admin_token: '{{keycloak_token.json.access_token}}'
 
 # Realms
-#- include_tasks:
-#    file: create_realm.yml
-#  vars:
-#    keycloak_realm_id: '{{item.realm_id}}' 
-#    keycloak_realm_data_file: '{{item.realm_file}}'
-#  with_items: '{{keycloak_mosip_realms}}'
-#
-## Clients
-#- include_tasks:
-#    file: create_client.yml
-#  vars:
-#      kc_realm_id: '{{item.realm_id}}'   
-#      kc_client_id: '{{item.client_id}}'
-#      kc_client_is_admin: '{{item.is_admin}}'  
-#      kc_client_secret: '{{item.secret}}'
-#  with_items: '{{keycloak_mosip_clients}}'
-#
-## Roles 
+- include_tasks:
+    file: create_realm.yml
+  vars:
+    keycloak_realm_id: '{{item.realm_id}}' 
+    keycloak_realm_data_file: '{{item.realm_file}}'
+  with_items: '{{keycloak_mosip_realms}}'
+
+# Clients
+- include_tasks:
+    file: create_client.yml
+  vars:
+      kc_realm_id: '{{item.realm_id}}'   
+      kc_client_id: '{{item.client_id}}'
+      kc_client_is_admin: '{{item.is_admin}}'  
+      kc_client_secret: '{{item.secret}}'
+  with_items: '{{keycloak_mosip_clients}}'
+
+# Roles 
 - include_tasks:
     file: create_role.yml
   vars:
     kc_realm_id: '{{item.realm_id}}'   
     kc_client_id: '{{item.client_id}}'
-    kc_role_json: '{{item.role_json}}' 
+    kc_role_name: '{{item.role_name}}' 
   with_items: '{{keycloak_mosip_roles}}'
 
 # Users
